--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,1 +1,4 @@
-<h1><%= @trainer.name %></h1>
+<h1><%= @trainer.name %> info:</h1>
+
+<p>Age: <%= @trainer.age %></p>
+<p>Awake? <%= @trainer.awake %></p>
